--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
-<app-hero></app-hero>
-<app-service></app-service>
-<app-testimonials></app-testimonials>
+<div class="h-full">
+    <app-navbar></app-navbar>
+    <app-hero></app-hero>
+    <app-service></app-service>
+    <app-testimonials></app-testimonials>
+</div>
