--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -1,29 +1,29 @@
 <div class="font-serif pt-10">
-    <div class="text-center relative pb-20">
+    <div class="text-center relative pb-10 lg:pb-20">
         <p class="text-lightGray leading-normal text-base font-bold">TESTIMONIALS</p>
-        <h1 class="text-5xl text-darkBlue font-bold">What Clients say about us</h1>
+        <h1 class="text-3xl lg:text-5xl text-darkBlue font-bold">What Clients say about us</h1>
     </div>
 
-    <div class="grid grid-cols-2 px-24 gap-x-10 relative gap-y-10 pb-10">
-        <div *ngFor="let review of testimonialArray" class=" flex items-start gap-10 ">
-            <img class='' src={{review.imgSrc}} alt="">
+    <div class="lg:grid lg:grid-cols-2 lg:px-24 lg:gap-x-10 px-4 relative lg:gap-y-10 pb-10">
+        <div *ngFor="let review of testimonialArray" class=" flex items-start gap-5 lg:gap-10 mb-6">
+            <img src={{review.imgSrc}} alt="">
 
             <div>
-                <p class="text-darkBlue font-medium text-lg pb-5">{{review.review}}</p>
+                <p class="text-darkBlue font-medium text-lg lg:pb-5">{{review.review}}</p>
                 <p class="text-lightGray font-bold">{{review.author}}</p>
             </div>
         </div>
     </div>
 </div>
 
-<div class="font-serif pt-10 pb-10 px-24">
+<div class="font-serif lg:pt-10 pb-10 px-4 lg:px-24">
     <div class="text-center relative pb-10">
         <p class="text-lightGray leading-normal text-base font-bold">OUR TEAM</p>
-        <h1 class="text-5xl text-darkBlue font-bold">Meet The Team</h1>
+        <h1 class="text-3xl lg:text-5xl text-darkBlue font-bold">Meet The Team</h1>
     </div>
 
-    <div class="flex px-24 justify-center gap-10 relative">
-        <div *ngFor="let team of teamArray" class="w-80 flex Border flex-col items-center pt-10 ">
+    <div class="flex flex-col px-4 lg:flex-row lg:px-24 lg:justify-center lg:gap-10 relative">
+        <div *ngFor="let team of teamArray" class="lg:w-80 flex Border flex-col items-center pt-10 mb-6 ">
             <div>
                 <img src={{team.imgSrc}} alt="">
             </div>
@@ -32,13 +32,13 @@
             <p class="leading-loose font-bold text-lightGray text-sm">{{team.teamRole}}</p>
 
             <div class="flex pt-10 ">
-                <div class="w-24 text-center py-3 border-2 border-b-0">
+                <div class="lg:w-24 w-16 text-center py-3 border-2 border-b-0">
                     <i class="uil uil-twitter text-lightGray text-2xl"></i>
                 </div>
-                <div class="w-24 text-center py-3 border-r-2 border-t-2">
+                <div class="lg:w-24 w-16 text-center py-3 border-r-2 border-t-2">
                     <i class="uil uil-facebook text-2xl  text-lightGray"></i>
                 </div>
-                <div class="w-24 text-center py-3 border-r-2 border-t-2">
+                <div class="lg:w-24 w-16 text-center py-3 border-r-2 border-t-2">
                     <i class="uil uil-dribbble text-2xl text-lightGray"></i>
                 </div>
             </div>
@@ -46,18 +46,18 @@
     </div>
 </div>
 
-<div class="font-serif pt-10 px-24">
+<div class="font-serif pt-10 lg:px-24 px-4">
     <div class="text-center relative pb-10">
         <p class="text-lightGray leading-normal text-base font-bold">OUR TEAM</p>
-        <h1 class="text-5xl text-darkBlue font-bold">Subscribe Our Newsletter</h1>
+        <h1 class="text-3xl lg:text-5xl text-darkBlue font-bold">Subscribe Our Newsletter</h1>
     </div>
 
-    <div class="flex justify-between">
+    <div class="flex justify-between flex-col lg:flex-row">
         <div>
-            <img src="../assets/Frame.png" alt="">
+            <img src="/assets/Frame.png" alt="">
         </div>
 
-        <div class="w-1/2 flex flex-col gap-y-10">
+        <div class="lg:w-1/2 flex flex-col gap-y-10">
             <p class="text-lg leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam</p>
@@ -71,21 +71,25 @@
 </div>
 
 
-<div class="px-24 pt-20 pb-10 items-center font-serif justify-between flex">
-    <div class="w-32">
-        <img src="../assets/logo.png" alt="">
-    </div>
+<div class="lg:px-24 px-4 pt-20 pb-10 lg:items-center font-serif flex-col lg:flex-row justify-between flex">
     <div>
-        <p class="text-lightBlue text-base font-normal">&#169; {{year}} Epixelab. All rights reserved.</p>
+        <div class="w-32 pb-4">
+            <img src="/assets/logo.png" alt="">
+        </div>
+
     </div>
 
     <div>
-        <ul class="flex text-lightBlue gap-5 text-base">
+        <ul class="flex flex-col pb-5 lg:pb-0 lg:flex-row text-lightBlue gap-5 text-base">
             <li>Portfolio</li>
             <li>How it Works</li>
             <li>Pricing</li>
             <li>About</li>
             <li>Login</li>
         </ul>
+    </div>
+
+    <div class="pb-3">
+        <p class="text-lightBlue text-base font-normal">&#169; {{year}} Epixelab. All rights reserved.</p>
     </div>
 </div>
